--- a/Public/easyui/themes/icon.css
+++ b/Public/easyui/themes/icon.css
@@ -112,3 +112,6 @@
 .icon-book{
 	background:url('icons/book_open.png') no-repeat center center;
 }
+.icon-cross{
+	background:url('icons/cross.png') no-repeat center center;
+}
