--- a/Public/easyui/themes/icon.css
+++ b/Public/easyui/themes/icon.css
@@ -121,3 +121,6 @@
 .icon-newadd{
 	background:url('icons/newadd.png') no-repeat center center;
 }
+.icon-newedit{
+	background:url('icons/newedit.png') no-repeat center center;
+}
