--- a/Public/easyui/themes/icon.css
+++ b/Public/easyui/themes/icon.css
@@ -124,3 +124,6 @@
 .icon-newedit{
 	background:url('icons/newedit.png') no-repeat center center;
 }
+.icon-remove{
+	background:url('icons/remove.png') no-repeat center center;
+}
