--- a/Public/easyui/themes/icon.css
+++ b/Public/easyui/themes/icon.css
@@ -127,3 +127,6 @@
 .icon-remove{
 	background:url('icons/remove.png') no-repeat center center;
 }
+.icon-newlock{
+	background:url('icons/newlock.png') no-repeat center center;
+}
