--- a/Public/easyui/themes/icon.css
+++ b/Public/easyui/themes/icon.css
@@ -130,3 +130,6 @@
 .icon-newlock{
 	background:url('icons/newlock.png') no-repeat center center;
 }
+.icon-go{
+	background:url('icons/go.png') no-repeat center center;
+}
